--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - automake
     - make
     - libtool
+    - lzip
   host:
     - gsl
     - cfitsio
@@ -54,7 +55,7 @@ test:
     - astconvolve --help
     - astcrop --help
     - astmatch --help
-    - astmknoise --help
+#    - astmknoise --help
     - astnoisechisel --help
     - asttable --help
 
