--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,8 +6,8 @@ package:
   version: {{ version }}
 
 source:
-  url: http://ftp.gnu.org/gnu/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 924b8bb6ac1cd15163ddadc3a9bfdb8b88cac7b5099d5f821ecedbc3f0b069cd
+  url: https://akhlaghi.org/src/gnuastro-0.20.74-428b.tar.xz
+  sha256: b821b47cfcfbf0fc2bae17795457dd7ce3cc37558b0a6e0e2a71980c961a45eb
 
 build:
   number: 5
@@ -53,7 +53,6 @@ test:
     - astconvolve --help
     - astcrop --help
     - astmatch --help
-    - astmknoise --help
     - astnoisechisel --help
     - asttable --help
 
