--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,8 +6,8 @@ package:
   version: {{ version }}
 
 source:
-  url: http://ftp.gnu.org/gnu/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 2fba993d8422391517b55f7eb511788946d7a886aa1584984fd4678bdd27537f
+  url: http://akhlaghi.org/src/gnuastro-0.21.90-3c5d.tar.xz
+  sha256: 1b2f9721f8a272d5d3b9245b5bf1ea73027bef5ea70c2d6747800e80e5e513ee
 
 build:
   number: 0
