--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,8 +6,8 @@ package:
   version: {{ version }}
 
 source:
-  url: http://akhlaghi.org/src/gnuastro-0.21.92-45cd.tar.xz
-  sha256: 108f0cb5649b7d006a116f2a30138e251f44a5d09863d8e1a0377a90f6a438a0
+  url: http://akhlaghi.org/src/gnuastro-0.21.96-995df0.tar.xz
+  sha256: 8ab262b46cb2783616bc4e875e39340122640da0beda0ebb7edbe7fae4e0646d
 
 build:
   number: 0
